# mcp-spec-validator

./: .dockerignore  Dockerfile  README.md  build-and-push.sh  build-and-run.sh  cloudbuild.yaml  k8s-deployment.yaml  main.py  mcp_server.py  my_agent.py  pyproject.toml  test.md  ui.py
final/: mcp_server.py  my_agent.py  ui-old.py  ui-working-before-GKE.py
k8s/: k8s-deployment.yaml
test-files/: docker-compose.yml  temp  test.py  tests.ipynb
